# electronics_design

./: .gitignore  AGENTS.md  LTSPICE_ERROR_CODES.md  LTSPICE_NET.md  LTSpice_ASC.md  PLAN.md  PROFILE.md  README.md  SCHEMDRAW.md  SUBMIT.md  pyproject.toml
scripts/: analyze_orient.py  combine_wire_flag.py  combine_wire_flag_directory.py  delete_wire_flag.py  delete_wire_flag_directory.py  fix_asc_encoding.py  gui_debug.py  json_to_wire.py  json_to_wire_directory.py  ltspice_asc_plot_schemdraw.py  ltspice_asc_structure_cmp.py  ltspice_asc_structure_cmp_directory.py  ltspice_asc_symbol_info.py  ltspice_asc_symbol_info_directory.py  ltspice_asc_to_netlist.py  ltspice_autoplace_symbol_pose.py  ltspice_net_to_networkxpng.py  ltspice_netlist_to_asc.py  ltspice_netlist_to_asc_directory.py  ltspice_netlist_to_wiring.py  ltspice_netlist_to_wiring_directory.py  run_all_tests.py  score_convert.py  zero_json.py
tests/: __init__.py
valid_asc/: A-class-amplifier-bjt.asc  Common-collector-emitter-follower-amplifier.asc  Common-emitter-BJT.asc  Double-stage-common-emitter-amplifier.asc  Example-of-DC-sweep.asc  Full-bridge-rectifier.asc  Instrumentation-amplifier.asc  LC-and-RC-series- bandpass-filter.asc  LT_VERSION_4_1.asc  Notch-and-band-suppress-filters.asc  RC-highpass-frequency-domain.asc  RC-lowpass- frequency-domain.asc  RC-lowpass-cascaded.asc  RC-lowpass-step-response.asc  RC-lowpass.asc  RC-square-wave-response.asc  RLC-step-response-example.asc  Single-phase-rectifier-R-load-smoothing-capacitor.asc  Three-phase-naive-inverter.asc  Three-phase-naive-supply-system.asc
(+1452 files in other folders)
