[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electronics_design"
version = "0.1.0"
description = "General-purpose Python utilities for validating LTspice netlists."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "brosnan" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dependencies = [
  "networkx>=3.6.1",
  "Pillow>=10.0.0"
]

[project.urls]
Homepage = "https://pypi.org/project/electronics_design/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
